<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add">Add</string>
    <string name="add_user_mark">User Mark</string>
    <string name="add_user_mark_title">Add User Mark</string>
    <string name="advanced">Advanced</string>
    <string name="altitude">Altitude</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="ap_detail">AP Detail</string>
    <string name="ap_details">AP Details</string>
    <string name="app_menu">Uniden</string>
    <string name="app_name">R/TACH</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="band_alert_icon">band alert icon</string>
    <string name="battery">Battery</string>
    <string name="block">Block</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="browse_places_title">Browse Places</string>
    <string name="btn_mute">Mute</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="change">Change</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_action_title">Close</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">00000000000000000000000000000000</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connect">Connect</string>
    <string name="connect_wifi_text">Please Connect your radar with 2.4GHz Wi-Fi for firmware update</string>
    <string name="current_firmware">Current Firmware</string>
    <string name="current_location_title">Current Location</string>
    <string name="delete">Delete</string>
    <string name="delete_red_light_camera">Delete RedLight Camera</string>
    <string name="delete_user_mark">Delete</string>
    <string name="disconnect">Disconnect</string>
    <string name="e">E</string>
    <string name="enable_location_action_title">Enable Location</string>
    <string name="enable_location_permission_on_device_msg">Enable Location Permissions on device</string>
    <string name="enable_location_permission_on_phone_msg">Enable location on the phone screen</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="feet">ft</string>
    <string name="firmware_info">Firmware Info</string>
    <string name="firmware_update_progress">Firmware Update Progress</string>
    <string name="firmware_updated_fail">Firmware Update Failed !</string>
    <string name="firmware_updated_success">Firmware Updated Successfully</string>
    <string name="firmware_updating">Firmware Updating</string>
    <string name="gcm_defaultSenderId">387798799321</string>
    <string name="google_api_key">AIzaSyA15xpXNbNht_qOaJT_w7Hg_xG5j5D0yCM</string>
    <string name="google_app_id">1:387798799321:android:043d8e38de22241387ffc8</string>
    <string name="google_crash_reporting_api_key">AIzaSyA15xpXNbNht_qOaJT_w7Hg_xG5j5D0yCM</string>
    <string name="google_maps_key">AIzaSyCb4g9UXlOCaWjYhmfkdIjgecYqiThA26A</string>
    <string name="google_storage_bucket">uniden-9a602.appspot.com</string>
    <string name="grant_access_action_title">Grant Access</string>
    <string name="grant_location_permission_toast_msg">Grant location Permission to see current location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="image_band_level">Image band level</string>
    <string name="item_view_role_description">Tab</string>
    <string name="k">K</string>
    <string name="limit_speed">Limit Speed:</string>
    <string name="list_of_device">List of devices</string>
    <string name="location_1_address">747 6th St South, Kirkland, WA 98033</string>
    <string name="location_1_description">Tinted resource vector</string>
    <string name="location_1_phone">+14257395600</string>
    <string name="location_1_title">Google Kirkland</string>
    <string name="location_2_address">1120 112th Ave NE, Bellevue, WA 98004</string>
    <string name="location_2_description">Image resource bitmap</string>
    <string name="location_2_phone">+14252301301</string>
    <string name="location_2_title">Google Bellevue</string>
    <string name="location_3_address">1021 Valley St, Seattle, WA 98109</string>
    <string name="location_3_description">Colored text marker</string>
    <string name="location_3_phone">+12065311800</string>
    <string name="location_3_title">Google South Lake Union</string>
    <string name="location_4_address">601 N 34th St, Seattle, WA 98103</string>
    <string name="location_4_description">Image bitmap</string>
    <string name="location_4_phone">+12068761800</string>
    <string name="location_4_title">Google Seattle</string>
    <string name="location_5_address">1600 Amphitheatre Pkwy, Mountain View, CA 94043</string>
    <string name="location_5_phone">+16502530000</string>
    <string name="location_6_address">11831 North Creek Pkwy, Bothell, WA 98011</string>
    <string name="location_6_title">Google Bothell</string>
    <string name="location_7_address">5900 Lake Washington Blvd S, Seattle, WA 98118</string>
    <string name="location_7_title">Seward Park</string>
    <string name="location_8_address">2040 84th Ave SE, Mercer Island, WA 98040</string>
    <string name="location_8_title">Luther Burbank Park</string>
    <string name="location_9_address">111 Waverly Way, Kirkland, WA 98033</string>
    <string name="location_9_title">Heritage Park</string>
    <string name="location_description_text_label">Text label</string>
    <string name="location_phone_not_available">n/a</string>
    <string name="m3_exceed_max_badge_text_suffix">%1$s%2$s</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1)</string>
    <string name="menu_wifi_setting">Wi-Fi Settings</string>
    <string name="mode">Mode:</string>
</resources>