<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/parentLayout"
        android:background="@drawable/bg_uniden"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appBarButton"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/ic_back"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/txtAppBarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_wifi_setting"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_back"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@drawable/bg_wifi"
            android:padding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp">
            <ImageView
                android:id="@+id/imgInfo"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/ic_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/txtApDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ap_details"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="@+id/imgInfo"
                app:layout_constraintStart_toEndOf="@+id/imgInfo"
                app:layout_constraintTop_toTopOf="@+id/imgInfo"/>
            <ImageView
                android:id="@+id/imgWife"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/ic_wifi_not_connect"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgInfo"
                app:tint="@color/white"/>
            <TextView
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:id="@+id/txtConnectedWifi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/connect_wifi_text"
                android:lines="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txtApDetail"
                app:layout_constraintTop_toTopOf="@+id/imgWife"/>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/ll_ssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="@+id/imgWife"
                app:layout_constraintTop_toBottomOf="@+id/txtConnectedWifi">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SSID"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dropdownWiFi"
                    android:background="@drawable/bg_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:endIconTint="@color/white"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                    <AutoCompleteTextView
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/low_white"
                        android:gravity="center_vertical"
                        android:id="@+id/selectedSSID"
                        android:background="@android:color/transparent"
                        android:padding="@dimen/_10sdp"
                        android:paddingTop="@dimen/_5sdp"
                        android:clickable="false"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_43sdp"
                        android:hint="Select SSID"
                        android:layout_weight="1"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/llPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/ll_ssid">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Password"/>
                <EditText
                    android:textColor="@color/white"
                    android:id="@+id/edtPassword"
                    android:background="@drawable/bg_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_43sdp"
                    android:layout_marginTop="@dimen/_10sdp"/>
            </LinearLayout>
            <TextView
                android:textColor="@color/gray"
                android:gravity="center"
                android:id="@+id/btn_update"
                android:background="@drawable/bg_edittext"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/connect"
                android:textAlignment="center"
                android:backgroundTint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/llPassword"
                app:layout_constraintStart_toStartOf="@+id/llPassword"
                app:layout_constraintTop_toBottomOf="@+id/llPassword"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</FrameLayout>
