<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/fragment_dashboard_0"
    android:background="@drawable/bg_uniden"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBarButton"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.uniden.rtach.helper.GaugeView
            android:id="@+id/imgSpeedometer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_110sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:layout_marginHorizontal="@dimen/_25sdp"
            app:layout_constraintBottom_toTopOf="@+id/cs_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:needleHeight="0.58"
            app:needleWidth="0.01"
            app:scaleEndValue="220"
            app:scaleStartValue="0"
            app:showInnerRim="false"
            app:showOuterRim="false"
            app:showOuterShadow="false"
            app:showText="true"/>
        <ImageView
            android:id="@+id/bg_speedometer"
            android:layout_width="@dimen/_135sdp"
            android:layout_height="@dimen/_57sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:src="@drawable/bg_speedometer_speed"
            android:layout_marginEnd="@dimen/_2sdp"
            app:layout_constraintBottom_toBottomOf="@+id/imgSpeedometer"
            app:layout_constraintEnd_toEndOf="@+id/imgSpeedometer"
            app:layout_constraintStart_toStartOf="@+id/imgSpeedometer"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="horizontal"
            android:id="@+id/cs_bottom"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="horizontal"
                android:id="@+id/layoutMode"
                android:background="@drawable/bg_border_with_curv_corner_rect_angle"
                android:padding="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintBottom_toTopOf="@+id/llAlAndBattery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1">
                <TextView
                    android:textSize="@dimen/_15sdp"
                    android:textColor="#cccaca"
                    android:gravity="start"
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mode"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:gravity="right"
                    android:id="@+id/txtMode"
                    android:tag="binding_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/arrow"
                    app:layout_constraintTop_toTopOf="parent"/>
                <ImageView
                    android:id="@+id/arrow"
                    android:layout_width="@dimen/_13sdp"
                    android:layout_height="@dimen/_13sdp"
                    android:src="@drawable/drop_down"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/llAlAndBattery"
                android:padding="@dimen/_1sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:background="@drawable/bg_rectangle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/_5sdp">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent">
                        <LinearLayout
                            android:gravity="start|center_vertical"
                            android:padding="@dimen/_5sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_width="@dimen/_30sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:src="@drawable/altitude"
                                android:layout_marginStart="@dimen/_3sdp"
                                app:tint="@color/white"/>
                            <TextView
                                android:textSize="@dimen/_15sdp"
                                android:textStyle="bold"
                                android:textColor="@android:color/darker_gray"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/altitude"
                                android:textAlignment="center"/>
                        </LinearLayout>
                        <TextView
                            android:textSize="@dimen/_15sdp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:id="@+id/txtDistance"
                            android:tag="binding_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_3sdp"
                            android:textAlignment="center"/>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:background="@drawable/bg_rectangle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent">
                        <LinearLayout
                            android:gravity="start|center_vertical"
                            android:padding="@dimen/_5sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:layout_width="@dimen/_30sdp"
                                android:layout_height="@dimen/_30sdp"
                                android:src="@drawable/battery"
                                android:layout_marginStart="@dimen/_3sdp"
                                app:tint="@color/white"/>
                            <TextView
                                android:textSize="@dimen/_15sdp"
                                android:textStyle="bold"
                                android:textColor="@android:color/darker_gray"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/battery"
                                android:textAlignment="center"/>
                        </LinearLayout>
                        <TextView
                            android:textSize="@dimen/_15sdp"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:id="@+id/txtVolt"
                            android:tag="binding_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_3sdp"
                            android:textAlignment="center"/>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
